testsuite/poke.pkl/int-struct-type-diag-16.pk
/* { dg-do compile } */

type Foo = struct int<*> { }; /* { dg-error "invalid total size.*\n.*got 0 bits" } */
